--- a/asset-manager/web/src/main/resources/application.properties
+++ b/asset-manager/web/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 spring.application.name=assets-manager
 
-# AWS S3 Configuration
-aws.accessKey=your-access-key
-aws.secretKey=your-secret-key
-aws.region=us-east-1
-aws.s3.bucket=your-bucket-name
+# Azure Blob Storage Configuration
+azure.storage.account-name=${AZURE_STORAGE_ACCOUNT_NAME}
+azure.storage.blob.container-name=${AZURE_STORAGE_BLOB_CONTAINER_NAME}
 
 # Max file size for uploads
 spring.servlet.multipart.max-file-size=10MB
